# nn-c

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/core/: cgraph.h  graph.h  graph_functions.h  model.h  network.h  node.h  tensor.h  tensor_functions.h  tensors.h
include/utils/: utils.h
src/core/: cgraph.c  graph.c  graph_functions.c  main.c  model.c  network.c  node.c  tensor.c
